--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -1,53 +1,99 @@
-.Navigation-mobile-button {
-    width: 100%;
-    height: 100vh;
-}
-.Navigation-mobile-button-open {
-    width: 175px;
-    height: 50px;
-    background-color: #fff;
-    border: 1px solid #000;
-    border-radius: 50px;
-    color: #000;
-    font-size: 18px;
-    position: absolute;
-    right: 20px;
-    bottom: 20px;
-    position: fixed;
-}
-
-.Navigation-mobile-menu {
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #fff;
-    display: none;
-}
-.Navigation-mobile-menu-items {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 90px;
-    margin-left: 40px;
-}
-.Navigation-mobile-menu-items a {
-    font-size: 32px;
-    text-decoration: none;
-    color: #000;
-}
-.Navigation-mobile-button-close {
-    width: 175px;
-    height: 50px;
-    background-color: #fff;
-    border: 1px solid #000;
-    border-radius: 50px;
-    color: #000;
-    font-size: 18px;
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
+@media only screen and (min-width: 768px) {
+    .Navigation-container {
+        width: 300px;
+        height: 100vh;
+        overflow: hidden;
+        position: fixed;
+        top: 0;
+        right: 0;
+    }
+    .Navigation-mobile-button-open {
+        display: none;
+    }
+    .Navigation-mobile-button-close {
+        display: none;
+    }
+    .Navigation-menu-items {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        margin-top: 80px;
+        margin-left: 60px;
+    }
+    .Navigation-menu-items a {
+        font-size: 24px;
+        text-decoration: none;
+        color: #0E0E0C;
+        width: 100px;
+        padding: 0 1px;
+        position: relative; /* Add this line */
+    }
+    .Navigation-menu-items a::before {
+        content: '';
+        position: absolute;
+        width: 0;
+        height: 1px;
+        bottom: 0;
+        left: 0;
+        background-color: #0E0E0C; /* Change this to the color you want */
+        transition: width 0.3s ease; /* Adjust the transition speed as needed */
+    }
+    .Navigation-menu-items a:hover::before {
+        width: 100%;
+    }
 }
 
+@media only screen and (max-width: 850px) {
+    .Navigation-mobile-button {
+        width: 100%;
+        height: 100vh;
+    }
+    .Navigation-mobile-button-open {
+        width: 175px;
+        height: 50px;
+        background-color: #fff;
+        border: 1px solid #0E0E0C;
+        border-radius: 50px;
+        color: #0E0E0C;
+        font-size: 18px;
+        position: absolute;
+        right: 20px;
+        bottom: 20px;
+        position: fixed;
+    }
+
+    .Navigation-menu {
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: #fff;
+        display: none;
+    }
+    .Navigation-menu-items {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 90px;
+        margin-left: 40px;
+    }
+    .Navigation-menu-items a {
+        font-size: 32px;
+        text-decoration: none;
+        color: #0E0E0C;
+    }
+    .Navigation-mobile-button-close {
+        width: 175px;
+        height: 50px;
+        background-color: #fff;
+        border: 1px solid #0E0E0C;
+        border-radius: 50px;
+        color: #0E0E0C;
+        font-size: 18px;
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+    }
+}
