--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -16,15 +16,32 @@
     font-size: 128px;
     animation: fade-in 1s ease-in-out forwards;
 }
-.Contact-projects-container {
-    display: flex;
-    flex-wrap: wrap;
+
+.Contact-main-container {
+    padding: 0 165px 0 55px;
 }
-.Contact-project-container {
-    width: 50%;
-    position: relative;
-    aspect-ratio: 1; /* 1:1 aspect ratio */
-    border: 1px solid #0E0E0C;
+
+input[type="text"], input[type="email"], textarea{
+    width: 100%;
+    border: none;
+    border-bottom: #0E0E0C 2px solid;
+    font-size: 24px;
+    padding: 7px;
+    margin-bottom: 25px;
+}
+textarea {
+    height: 200px;
+}
+::placeholder {
+    color: #EBE4DA;
+}
+input[type="submit"] {
+    background: none;
+    border: none;
+    color: #0E0E0C;
+    font-size: 48px;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
 @media only screen and (max-width: 1100px) {
@@ -50,28 +67,5 @@
         animation: fade-in 1s ease-in-out forwards;
     }
 
-    .Contact-projects-container {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-    .Contact-project-container {
-        position: relative;
-        width: 100%;
-        height: 550px;
-        padding: 25px;
-        border: 1px solid #0E0E0C;
-    }
-    .Contact-project-created {
-        color: #D7D6D4;
-        font-size: 24px;
-        position: absolute;
-        bottom: 60px;
-    }
-    .Contact-project-title {
-        color: #0E0E0C;
-        font-size: 32px;
-        position: absolute;
-        bottom: 25px;
-    }
+    
 }
