--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -56,16 +56,17 @@ input[type="submit"] {
 
     .Contact-title {
         width: 100%;
-        height: 88vh;
+        height: 35vh;
         padding: 30px 25px 0 25px;
     }
     .Contact-title-text {
         color: #0E0E0C;
         font-size: 64px;
         font-weight: 400;
-        opacity: 0;
         animation: fade-in 1s ease-in-out forwards;
     }
-
+    .Contact-main-container {
+        padding: 0 25px;
+    }
     
 }
