--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -16,8 +16,76 @@
     font-size: 75px;
     animation: fade-in 1s ease-in-out forwards;
 }
+.About-content {
+    padding: 0 0 75px 55px;
+}
 
+.About-content-skills-container {
+    display: flex;
+    align-items: center;
 
+}
+.About-content-skills-text-container {
+    max-width: 515px;
+    padding-right: 50px;
+}
+.About-content-skills-title {
+    font-size: 64px;
+}
+.About-content-skills-text {
+    font-size: 32px;
+    
+}
+
+.About-content-skills-image-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 25px;
+    max-width: 520px;
+    max-height: 525px;
+}
+    
+#about-skills-image-1 { 
+    grid-area: 1 / 1 / 2 / 2; 
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+#about-skills-image-2 { 
+    grid-area: 1 / 2 / 2 / 3; 
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+ }
+#about-skills-image-3 { 
+    grid-area: 2 / 1 / 3 / 3; 
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+}
+
+.About-content-about-me-container {
+    margin-top: 75px;
+}
+.About-content-title {
+    font-size: 64px;
+}
+.About-content-about-me-content-container {
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+}
+.About-content-about-me-image {
+    max-width: 250px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    margin-right: 50px;
+}
+.About-content-about-me-text {
+    font-size: 32px;
+}
 
 @media only screen and (max-width: 1100px) {
     .About-title {
