--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -28,9 +28,11 @@ input[type="text"], input[type="email"], textarea{
     font-size: 24px;
     padding: 7px;
     margin-bottom: 25px;
+    background: none;
 }
 textarea {
     height: 200px;
+    background: none;
 }
 ::placeholder {
     color: #EBE4DA;
